# MODAS

./: .setup.py.swp  Dockerfile  MODAS.py  README.md  dependence.txt  example.txt  genoidx.py  localgwas.py  prescreen.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
modas/: MODAS.py  coloc.py  contrast.py  genoidx.py  gwas_cmd.py  localgwas.py  mr.py  multiprocess.py  phenorm.py  prescreen.py  regiongwas.py  visual.py
modas/utils/: gapit_functions.txt
modas/utils/assets/js/: test.js
utils/: CMplot.r  GAPIT.library.R  multi_trait_signal_manhattan.R
utils/assets/css/: modas.css
